Straightforward impl using bytebuffers. Turns out memorysegments were slower than used mappedbytebuffers.