@@ -16,5 +16,11 @@
 #
 
 
-JAVA_OPTS="--enable-preview"
+JAVA_OPTS="-XX:+UseParallelGC --enable-preview"
+JAVA_OPTS="$JAVA_OPTS -Xloggc:/tmp/x -XX:+PrintGCDetails"
+
+source "$HOME/.sdkman/bin/sdkman-init.sh"
+#sdk use java 21.0.1-open 1>&2
+sdk use java 21.0.1-graal 1>&2
+#sdk use java 21.0.1-graalce 1>&2
 time java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_vemana
